--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "verbamaximus",
+  "name": "verba-maximus23",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,15 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "13.1.1",
-    "autoprefixer": "^10.4.13",
-    "eslint": "8.31.0",
-    "eslint-config-next": "13.1.1",
     "next": "13.1.1",
-    "postcss": "^8.4.20",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-slideshow-image": "^4.1.1",
-    "tailwindcss": "^3.2.4"
+    "react-scroll-motion": "^0.3.2"
+  },
+  "devDependencies": {
+    "eslint": "8.31.0",
+    "eslint-config-next": "13.1.1"
   }
 }
